# Paddle-Lite

lite/: CMakeLists.txt
lite/api/python/pybind/: pybind.cc
lite/backends/nnadapter/nnadapter/: nnadapter.h
lite/backends/nnadapter/nnadapter/core/operation/: all.h  cast.cc  gather.cc  gather.h  grid_sample.cc  range.cc  roi_align.cc  sum.cc  tile.cc  tile.h
lite/backends/nnadapter/nnadapter/driver/huawei_ascend_npu/: engine.cc  engine.h  utility.cc  utility.h
lite/backends/nnadapter/nnadapter/driver/huawei_ascend_npu/converter/: all.h  comparisons.cc  fill.cc  layer_normalization.cc  range.cc  roi_align.cc  unary_activations.cc
lite/backends/nnadapter/nnadapter/include/nnadapter/: nnadapter.h
lite/backends/nnadapter/nnadapter/include/nnadapter/operation/: im2col.h
lite/backends/nnadapter/nnadapter/optimizer/: eliminate_fill_constant.cc  eliminate_fill_constant.h  eliminate_nnadapter_fill.cc  eliminate_nnadapter_fill.h  net_optimizer.h
lite/backends/nnadapter/nnadapter/src/driver/huawei_ascend_npu/: model_client.cc  utility.cc
lite/backends/nnadapter/nnadapter/src/driver/huawei_ascend_npu/converter/: lp_normalization.cc  pool2d.cc
lite/backends/nnadapter/nnadapter/src/driver/qualcomm_qnn/: CMakeLists.txt  dependencies.cmake  engine.cc  engine.h  utility.cc  utility.h
lite/backends/nnadapter/nnadapter/src/driver/qualcomm_qnn/converter/: activations.cc  converter.cc  converter.h
lite/backends/nnadapter/nnadapter/src/driver/qualcomm_qnn/converter/cpu/: CMakeLists.txt  op_package.cc  op_package.h  op_package_interface.cc  relu.cc
lite/backends/nnadapter/nnadapter/src/driver/qualcomm_qnn/converter/htp/: CMakeLists.txt  op_package.cc  op_package.h  op_package_interface.cc  relu.cc  relu.h
lite/backends/nnadapter/nnadapter/src/operation/: all.h  elementwise.cc  im2col.cc
lite/backends/nnadapter/nnadapter/src/utility/: debug.cc
lite/backends/nnadapter/nnadapter/utility/: debug.cc
lite/core/optimizer/: optimizer.cc  optimizer.h
lite/core/optimizer/mir/: control_flow_op_shared_inputs_and_outputs_data_sync_pass.cc  control_flow_op_shared_inputs_and_outputs_value_sync_pass.cc  control_flow_op_shared_inputs_and_outputs_value_sync_pass.h
lite/core/optimizer/mir/elimination/: assign_value_calc_offline_pass.cc  fill_constant_calc_offline_pass.cc  fill_constant_calc_offline_pass.h  range_calc_offline_pass.cc  scale_calc_offline_pass.cc  ssd_boxes_calc_offline_pass.cc  unsqueeze_calc_offline_pass.cc  utility.cc  utility.h
lite/kernels/host/: range_compute.cc
lite/kernels/huawei_ascend_npu/bridges/: dropout_op.cc  paddle_use_bridges.h  prior_box_op.cc
lite/kernels/nnadapter/: utility.cc
lite/kernels/nnadapter/converter/: all.h  conv2d_transpose.cc  grid_sample.cc  im2sequence.cc  lookup_table_v2.cc  roi_align.cc  softmax.cc  sum.cc  tile.cc
lite/operators/: elementwise_ops.cc  lookup_table_v2_op.cc  reshape_op.cc  write_back_op.cc
lite/tests/api/: CMakeLists.txt
lite/tests/cv/anakin/: nv21_resize.cc
lite/tests/kernels/: activation_compute_test.cc  meshgrid_compute_test.cc  stride_slice_compute_test.cc  strided_slice_compute_test.cc
